--- a/style.css
+++ b/style.css
@@ -1,19 +1,29 @@
 #mapa {
-    background-color: grey;
-    height: 500px;
-    width: 1000px;
+    background-color: rgba(43, 42, 42, 0);
+    height: 600px;
+    width: 600px;
 }
 
 .time-control {
     left: 20px;
     bottom: 20px;
     z-index: 1000;
-    background: rgba(255, 255, 255, 0.8);
-    border: 1px solid #999999;
+    background: rgba(104, 100, 100, 0.8);
+    border: 1px solid #615c5c;
     border-radius: 3px;
     box-shadow: 1px 1px 2px #000000;
     vertical-align: middle;
     font-family: sans-serif;
     font-size: 14px;
     padding: 8px 12px;
+  }
+
+
+  .mapa-content {
+    position: absolute;
+  
+    left: 50%;
+    top: 60%;
+  
+    transform: translate(-50%, -50%);
   }
