--- a/style.css
+++ b/style.css
@@ -16,14 +16,68 @@
     font-family: sans-serif;
     font-size: 14px;
     padding: 8px 12px;
-  }
+}
 
 
-  .mapa-content {
+.mapa-content {
     position: absolute;
   
     left: 50%;
     top: 60%;
   
     transform: translate(-50%, -50%);
-  }
+}
+
+.container {
+    padding: 10px;
+}
+
+.conjunto-sliders {
+    position:relative;
+    max-width: 58rem;
+    margin: 0 auto;
+
+}
+
+.slider {
+    display: flex;
+    aspect-ratio: 16 / 9;
+    overflow-x: auto;
+    scroll-snap-type: x mandatory;
+    scroll-behavior: smooth;
+    box-shadow: 0 1.5rem 3rem -0.75rem hsla(0, 0%, 0%, 0.25);
+    border-radius: 0.5rem;
+}
+
+.slider img {
+    flex: 1 0 100%;
+    scroll-snap-align: start;
+    object-fit: cover;
+}
+
+.slider-nav {
+    display: flex;
+    column-gap: 1rem;
+    position: absolute;
+    bottom:1.25rem;
+    left: 50%;
+    transform: translate(-50%);
+    z-index: 1;
+}
+
+.slider-nav a{
+    width: 0;
+    height: 0.5;
+    border-radius: 50%;
+    background-color: #ffff;
+    opacity: 0.75;
+    transition: opacity ease 250ms;
+}
+
+.slider-nav a:hover {
+    opacity: 1;
+}
+
+::-webkit-scrollbar {
+    display: none;
+}
