--- a/styles/style.css
+++ b/styles/style.css
@@ -42,7 +42,7 @@
 
 #slider {
     margin: 0 auto;
-    width: 800px;
+    width: 1600px;
     max-width: 100%;
     text-align: center;
  }
@@ -54,8 +54,7 @@
     text-decoration: none;
  }
  #slides {
-    padding: 10px;
-    border: 3px solid #ccc;
+    padding: 0;
     background: #fff;
     position: relative;
     z-index: 1;
@@ -80,7 +79,7 @@
     transition: margin-left 800ms cubic-bezier(0.770, 0.000, 0.175, 1.000);
     width: 400%;
     line-height: 0;
-    height: 300px;
+    height: 500px;
  }
  #slides .slide {
     width: 25%;
