--- a/styles/style.css
+++ b/styles/style.css
@@ -105,6 +105,17 @@
   }
 
 /* News Cards */
+.section1 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    justify-content: flex-end;
+    padding-bottom: 30px;
+    margin-bottom: 20px;
+    color: #fff;
+}
+
 .news-cards {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
