--- a/styles/style.css
+++ b/styles/style.css
@@ -7,6 +7,7 @@
   body {
     font-family: "Oswald", sans-serif;
     font-size: 16px;
+    height: 100%;
   }
 
   a {
@@ -24,9 +25,16 @@
   }
 
 #mapa {
-    background-color: rgba(43, 42, 42, 0);
-    height: 700px;
-    width: 600px;
+    background-color: rgb(185, 209, 209);
+    height: 70vh;
+    width: 50%;
+    margin: auto;
+
+}
+
+.main-header {
+  background: linear-gradient(
+        to left,#02335e 0,#1e5d88 25%,#393358 50%,#424346 75%,#191b1d 100%);
 }
 
 .time-control {
@@ -44,13 +52,18 @@
 }
 
 .mapa-content {
-    position: absolute;
+    justify-content: center;
+    align-items: center; 
 
     perspective: 800px; 
     left: 50%;
     top: 70%;
 
-    transform: translate(-50%, -50%);
+    display: inline;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;  
 }
 
 #dimension-section{
@@ -143,4 +156,16 @@
 
 ::-webkit-scrollbar {
     display: none;
+}
+
+footer {
+  padding: 9px;
+  float: right;
+  margin-top: 20px;
+  color: #f2f2f2;
+  background: #02335e;
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
 }
