--- a/styles/style.css
+++ b/styles/style.css
@@ -8,6 +8,8 @@
     font-family: "Oswald", sans-serif;
     font-size: 16px;
     height: 100%;
+    background-color: #000000;
+background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='32' height='32' viewBox='0 0 32 32'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='Artboard-5' fill='%23471f88' fill-opacity='0.4' fill-rule='nonzero'%3E%3Cpath d='M6 18h12V6H6v12zM4 4h16v16H4V4z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
   }
 
   a {
@@ -25,9 +27,9 @@
   }
 
 #mapa {
-    background-color: rgb(185, 209, 209);
-    height: 70vh;
-    width: 50%;
+    background-color: rgba(105, 107, 107, 0);
+    height: 800px;
+    width: 800px;
     margin: auto;
 
 }
@@ -56,7 +58,7 @@
     align-items: center; 
 
     perspective: 800px; 
-    left: 50%;
+    left: 100%;
     top: 110%;
 
     display: inline;
@@ -65,6 +67,7 @@
     justify-content: center;
     align-items: center;  
 }
+
 
 #dimension-section{
     margin: 20px;
@@ -97,12 +100,13 @@
   .showcase {
     width: 100%;
     height: 550px;
-    background: url("FISI.jpg") no-repeat center center/cover;
+    background: url("../img/fisiperdido.jpg") no-repeat center center/cover;
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
     justify-content: flex-end;
+    padding-top: 400px;
     padding-bottom: 50px;
     margin-bottom: 20px;
     color: #fff;
@@ -124,7 +128,7 @@
     align-items: center;
     text-align: center;
     justify-content: flex-end;
-    padding-bottom: 0px;
+    padding-top: 20px;
     margin-bottom: 0px;
     color: #fff;
 }
@@ -147,7 +151,8 @@
   }
   
   .news-cards a {
-    padding: 10px 0;
+    padding-bottom: 10px;
+    padding-top: 0px;
     color: #f2f2f2;
     text-transform: uppercase;
     display: inline-block;
@@ -163,8 +168,8 @@ footer {
   float: right;
   margin-top: 20px;
   color: #f2f2f2;
-  background: #02335e;
-  position: absolute;
+  background: #02335e00;
+  position: relative;
   left: 0;
   right: 0;
   bottom: 0;
